[package]
name = "echodb"
publish = true
edition = "2021"
version = "0.3.0"
readme = "CARGO.md"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "An embedded, in-memory, immutable, copy-on-write database engine"
repository = "https://github.com/surrealdb/echodb"
homepage = "https://github.com/surrealdb/echodb"
keywords = ["database", "embedded-database", "key-value", "key-value-store", "kv-store"]
categories = ["database-implementations", "data-structures", "embedded"]
license = "Apache-2.0"

[dependencies]
arc-swap = "1.5.0"
imbl = "1.0.1"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["rt", "macros"] }
